--- a/2_layout/10_grid_system-nesting/style.css
+++ b/2_layout/10_grid_system-nesting/style.css
@@ -2,5 +2,5 @@
     padding-top: 20px;
     padding-bottom: 20px;
     background-color: rgba(243, 117, 32, .15);
-    border: 1px solid rgba(243, 117, 32, .2);
+    border: 1px solid rgba(243,117,32, .2);
 }
